# roboteq

roboteq_driver/: CMakeLists.txt  package.xml
roboteq_driver/include/roboteq_driver/: channel.h
roboteq_driver/mbs/: FBL2360_EncoderFeedbackProfile.xml  HBL2360_EncoderFeedbackProfile.xml  Profile_Roboteq_18FEB2017_BAR_1.xml  README_Badger  script.hex  script.mbs  script_encoder_rpmscaling.mbs
roboteq_driver/src/: CMakeLists.txt  channel.cpp  controller.cpp
